========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2018-05-31

  - Changed template for version number from {date|short} to {date(date, "%s%)}
    as per discussion on #304 (thanks to Jason Chu for looking up the detail for
    this).


2018-05-29

  - Refactored the call to find duplicates in imported files so that it can be
    called only once with all the results from all the importers. This should
    eventually allow a user-provided function that can merge entries between
    importers. Existing behavior should be unaffected (though there may be a
    small delay until everything gets printed out; all the importers are invoked
    before any output is written). See #298.


2018-05-28

  - Fixed bug with tempdir being a symlink on Mac, which was making one test
    fail.

  - Fixed unit tests which failed due to timestamps getting rendered with an
    offset on a Mac while on a train in Japan.

  - Render tags and links on Document directive.

  - Minor bug fix: don't fail on rendering a MISSING instnace.


* Version: 2.1.2-devel

  - In 'divert_expenses' plugin, allow limiting diversions to one posting only.

  - Fixed unit test for git checkouts. This should fix the Travis-CI build.


* Version: 2.1.2

2018-05-12

  - Fixed setup.py to catch exceptions in the absence of git as well.


* Version: 2.1.1

2018-05-12

  - Fixed installation with missing version string.


* Version: 2.1.0

2018-05-12

  - Added back lexer test from Adrian Medrano Calvo's UTF8 changes to head.


2018-05-08

  - Fixed #287: In the price fetcher, store the datetime instances as
    naive-in-UTC in order to avoid a serialization problem with older Python
    versions.


2018-05-06

  - Changes to support git versioning if hg versioning is not available.


2018-05-05

  - Fixed #289: Add option to find beancount version. All scripts now support
    --version.
